welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: identifier expected but integer literal found.
  while (T[0]!=getCouleurSol){
           ^Array1:18: error: ']' expected but '}' found.
} 
^